@@ -51,6 +51,7 @@ depth: 1
  * Code quality fixes (GLEF1X)
  * Refactor image / document / snippet usage views into a shared generic view (Sage Abdullah)
  * Rename the Stimulus `AutoFieldController` to the less confusing `SubmitController` (Loveth Omokaro)
+ * Maintenance: Replace `script` tags with `template` tag for image/document bulk uploads (Rishabh Kumar Bahukhandi)
 
 ## Upgrade considerations
 
