@@ -46,7 +46,7 @@
         <ul id="upload-list" class="upload-list multiple"></ul>
     </div>
 
-    <script id="upload-list-item" type="text/template">
+    <template id="upload-list-item">
         <li class="row">
             <div class="left col3">
                 <div class="preview">
@@ -62,7 +62,7 @@
                 <p class="status-msg failure error_messages"></p>
             </div>
         </li>
-    </script>
+    </template>
 {% endblock %}
 
 {% block extra_js %}
